fix sizing/alignment in boxes

--- a/src/ZeeBi.UI/Content/Site.css
+++ b/src/ZeeBi.UI/Content/Site.css
@@ -63,6 +63,7 @@ input
 table
 {
 	border: 1px solid #294070;		
+	font-size: 12px;
 }
 	
 table thead
